[gd_scene load_steps=5 format=3 uid="uid://lsw03arsiqei"]

[ext_resource type="Texture2D" uid="uid://vuvysw7k1php" path="res://Assets/Sprite/Airship/Platform.png" id="1_5qjna"]
[ext_resource type="Script" uid="uid://cjtjx5w6b1lce" path="res://Characters/Scripts/trunk_base.gd" id="1_fjwi8"]
[ext_resource type="Script" uid="uid://dh2xkx76c8lrr" path="res://Characters/Scripts/Pulley.gd" id="2_ik43y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5qjna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5qjna")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="trunk_base" type="Node2D"]
script = ExtResource("1_fjwi8")

[node name="Pulley" type="Node2D" parent="."]
position = Vector2(20, 8)
script = ExtResource("2_ik43y")

[node name="trunk" type="AnimatedSprite2D" parent="Pulley"]
position = Vector2(6, 18)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_5qjna")
animation = &"Idle"

[node name="TrunkTimer" type="Timer" parent="Pulley"]

[connection signal="timeout" from="Pulley/TrunkTimer" to="." method="_on_trunk_timer_timeout"]
